image file updated

--- a/css/style.css
+++ b/css/style.css
@@ -42,3 +42,33 @@ p {
   min-height: 1px;
   margin:0 2% 20px;
 }
+
+/* tablet */
+@media (min-width: 768px) {
+   .container {
+     width: 750px;
+   }
+ }
+
+ /* laptop */
+ @media (min-width: 992px) {
+   .container {
+     width: 970px;
+   }
+   .one-half {
+     width:46%;
+   }
+   .one-third {
+     width:29.33333%;
+   }
+   .one-fourth {
+     width:21%;
+   }
+ }
+
+ /* desktop */
+ @media (min-width: 1200px) {
+   .container {
+     width: 1170px;
+   }
+ }
