--- a/css/style.css
+++ b/css/style.css
@@ -317,3 +317,69 @@ header .hero {
    position: relative;
    top: 20px;
  }
+
+
+ /* FOOTER */
+ footer {
+   background-color: #7F2100;
+   background-image: linear-gradient(to top, #CC3500 0%, #7F2100 100%);
+   color: #FFFFFF;
+   height: 150px;
+   position: relative;
+   overflow: hidden;
+   z-index: 0;
+ }
+ footer p, footer nav ul {
+   font-size:14px;
+   font-weight:100;
+   text-align: center;
+   margin: 10px auto 0;
+ }
+ footer nav ul li {
+   list-style-type: none;
+   display: inline;
+ }
+ footer nav ul li a {
+   color:#FFFFFF;
+   text-decoration: none;
+ }
+ footer .right-footer-block {
+   background-color: transparent;
+ }
+
+
+ footer .logo{
+   padding: 2.35em 0;
+   margin: 0 auto;
+   display: block;
+ }
+
+ @media (min-width: 992px){
+   footer{
+     background-color: #3498DB;
+     background-image: linear-gradient(to left,
+        #CC3500 0%, #7F2100 100%);
+     height: 150px;
+   }
+
+   footer p{
+     padding: 4em 0;
+     text-align: left;
+
+   }
+
+   footer nav ul{
+     padding: 4em 0;
+     display: inline-block;
+     overflow: hidden;
+     white-space: nowrap;
+
+   }
+
+   footer .logo{
+     position: absolute;
+     padding: 2em 0 2em 300px;
+     height: 75px;
+   }
+
+ }
