--- a/css/style.css
+++ b/css/style.css
@@ -181,9 +181,7 @@ header .hero {
 
  /* PRICING */
  .pricing {
-   background: ##7F2100 url("../images/background.jpg") top center no-repeat;
-   background: url("../images/background.jpg") top center no-repeat;
-   background-image: linear-gradient(-225deg, #CC3500 0%, #7F2100 100%);
+   background: url(../images/background.jpg) top center no-repeat, linear-gradient(-225deg, #CC3500 0%, #7F2100 100%);
    background-size:cover;
    text-align: center;
    padding:4em 0;
@@ -334,6 +332,7 @@ header .hero {
    font-weight:100;
    text-align: center;
    margin: 10px auto 0;
+   padding-left: 0;
  }
  footer nav ul li {
    list-style-type: none;
