--- a/css/style.css
+++ b/css/style.css
@@ -434,6 +434,10 @@ header .hero {
   margin-right:8px;
 }
 
+.left-nav .items .active li {
+    background-color: yellow;
+}
+
 /* LEFT NAVBAR SETTINGS */
  .left-nav .settings {
    position:absolute;
@@ -467,6 +471,8 @@ header .hero {
    margin-right:10px;
    margin-top:8px;
  }
+
+
 
  /* CONTENT */
 .content {
