--- a/css/dropit.css
+++ b/css/dropit.css
@@ -11,18 +11,59 @@
 .dropit {
     list-style: none;
 	padding: 0;
-	margin: 0;
+  margin: 15px 0 0;
+float:right;
+display:inline-block;
 }
 .dropit .dropit-trigger { position: relative; }
 .dropit .dropit-submenu {
     position: absolute;
     top: 100%;
-    left: 0; /* dropdown left or right */
+  right: 0; /* dropdown left or right */
     z-index: 1000;
     display: none;
-    min-width: 150px;
+    min-width: 100px;
     list-style: none;
-	padding: 0;
-	margin: 0;
+	padding: 20;
+	margin: 20px 0 0;
 }
-.dropit .dropit-open .dropit-submenu { display: block; }
+
+.dropit .dropit-open .dropit-submenu {
+  display: block;
+  background: #FFFFFF;
+    box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.30);
+    border-radius: 4px;
+}
+
+.dropit .dropit-open .dropit-submenu:after {
+ content: " ";
+ position: absolute;
+ border-style: solid;
+ border-width: 0 8px 8px;
+ border-color: #FFFFFF transparent;
+ display: block;
+ width: 0;
+ z-index: 1;
+ top: -8px;
+ right: 10px;
+}
+.dropit .dropit-open .dropit-submenu li {
+ display: block;
+ margin-bottom: 20px;
+}
+.dropit .dropit-open .dropit-submenu li:last-child {
+ margin-bottom: 0px;
+}
+.dropit .dropit-open .dropit-submenu li a {
+ color:#34495E;
+ text-decoration: none;
+ font-family: "Nunito", Helvetica, Arial, sans-serif;
+ font-weight:100;
+}
+
+.settings .dropit .dropit-open .dropit-submenu {
+  background-color: grey;
+  top: inherit;
+  bottom: 100%;
+
+}
