--- a/css/style.css
+++ b/css/style.css
@@ -391,14 +391,47 @@ header .hero {
 }
 .left-nav {
   font-family: 'Nunito', Helvetica, Arial, sans-serif;
-  height: 100vh;
-  width:14.66666667%;
-  color:#FFFFFF;
-  background: #7F2100;
-  float:left;
-  position: fixed;
-  display:block;
+  height: 100%;
+  width:280px;
+  position: absolute;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  transform: translate(-280px,0);
+    -webkit-transform: translate(-280px,0); /** Chrome & Safari **/
+    -o-transform: translate(-280px,0); /** Opera **/
+    -moz-transform: translate(-280px,0); /** Firefox **/
 }
+
+.left-nav.open {
+   display:block;
+   width:280px;
+   background: #7F2100;
+   -webkit-transition: all 0.3s ease-in-out;
+   -moz-transition: all 0.3s ease-in-out;
+   -o-transition: all 0.3s ease-in-out;
+   transition: all 0.3s ease-in-out;
+   transform: translate(0,0);
+     -webkit-transform: translate(0,0); /** Chrome & Safari **/
+     -o-transform: translate(0,0); /** Opera **/
+     -moz-transform: translate(0,0); /** Firefox **/
+     z-index: 100;
+ }
+
+ .hamburger {
+   position:absolute;
+   z-index: 1000;
+   background:#7F2100;
+   color:#FFF;
+   text-decoration: none;
+   font-size: 22px;
+   padding: 10px 15px;
+   border-radius: 4px;
+   left: 5px;
+   top: 15px;
+ }
+
 .left-nav .site-logo {
   padding:20px 0;
   background:#7F2100;
@@ -456,6 +489,7 @@ header .hero {
    display: inline-block;
  }
  .left-nav .settings p {
+   color: #FFFFFF;
    display: inline-block;
    vertical-align: top;
    padding-top: 8px;
@@ -563,6 +597,29 @@ header .hero {
    .content-item {
      width:23%;
      margin:0 1% 25px;
+   }
+   .left-nav {
+     height: 100vh;
+     width:14.66666667%;
+     color:#FFFFFF;
+     background: #7F2100;
+     float:left;
+     position: fixed;
+     display:block;
+     transform: translate(0,0);
+     -webkit-transform: translate(0,0); /** Chrome & Safari **/
+     -o-transform: translate(0,0); /** Opera **/
+     -moz-transform: translate(0,0); /** Firefox **/
+   }
+   .left-nav.open {
+     width:14.66666667%;
+     transform: translate(0,0);
+     -webkit-transform: translate(0,0); /** Chrome & Safari **/
+     -o-transform: translate(0,0); /** Opera **/
+     -moz-transform: translate(0,0); /** Firefox **/
+   }
+   .hamburger {
+     display:none;
    }
  }
 
