--- a/css/dropit.css
+++ b/css/dropit.css
@@ -24,7 +24,7 @@ display:inline-block;
     display: none;
     min-width: 100px;
     list-style: none;
-	padding: 20;
+	padding: 20px;
 	margin: 20px 0 0;
 }
 
